# NSU_EVM

lab1/: CMakeLists.txt  lab1.c  lab1_Smirnov_23201.docx
lab10/: CMakeLists.txt  lab10.cpp  lab10_Smirnov_23201.docx
lab2/: evm2.sh  lab2.c  lab2_Smirnov_23201.docx
lab3/: O0.asm  O1.asm  O2.asm  O3.asm  lab3_Smirnov_23201.docx
lab4/: O0.asm  O1.asm  O2.asm  O3.asm  lab4.c  lab4_Smirnov_23201.docx
lab5/: CMakeLists.txt  lab5.cpp  lab5_Smirnov_23201.docx
lab6/: CMakeLists.txt  lab6.cpp  lab6_Smirnov_23201.docx  mouseDriver.cpp
lab7/: CMakeLists.txt  lab7_Smirnov_23201.docx
lab7/src/: blas.cpp  main.cpp  mat.cpp  novec.cpp  vec.cpp
lab7/src/include/: blas.h  mat.h  novec.h  vec.h
lab8/: CMakeLists.txt  lab8.cpp  lab8_Smirnov_23201.docx
lab9/: CMakeLists.txt  lab9.cpp  lab9_Smirnov_23201.docx
